<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_miscellaneous"
        android:icon="@drawable/icon_miscellaneous"
        android:title="@string/title_miscellaneous" />

    <item
        android:id="@+id/navigation_pcinfo"
        android:icon="@drawable/icon_pcinfo"
        android:title="@string/title_pcinfo" />

    <item
        android:id="@+id/navigation_battery"
        android:icon="@drawable/icon_battery"
        android:title="@string/title_battery" />

    <item
        android:id="@+id/navigation_cpu"
        android:icon="@drawable/icon_cpu"
        android:title="@string/title_cpu" />

    <item
        android:id="@+id/navigation_hdd"
        android:icon="@drawable/icon_hdd"
        android:title="@string/title_hdd" />

</menu>
