<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/disconnected"
        android:icon="@mipmap/disconnected"
        android:orderInCategory="200"
        android:title="@string/connection_lost"
        app:showAsAction="always"/>

    <item
        android:id="@+id/connected"
        android:icon="@mipmap/connected"
        android:orderInCategory="200"
        android:title="@string/connected_to_pc"
        app:showAsAction="always"/>

    <item
        android:id="@+id/billingButton"
        android:icon="@drawable/icon_billings"
        android:orderInCategory="200"
        android:title="@string/remove_ads"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/infoMenuButton"
        android:icon="@drawable/icon_info"
        android:orderInCategory="200"
        android:title="@string/info"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/rescanMenuButton"
        android:icon="@drawable/icon_rescan"
        android:orderInCategory="200"
        android:title="@string/rescan"
        app:showAsAction="always"/>

    <item
        android:id="@+id/helpMenuButton"
        android:icon="@drawable/icon_help"
        android:orderInCategory="200"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>

</menu>
